# adventofcode

./: .gitignore  .stylish-haskell.yaml  0-1.hs  README.md  TODO.md  aoc.cabal  aocXX.cabal  cabal.project  fourmolu.yaml  template.hs
15/: 01-1.hs  01-2.hs  01NotQuiteLisp1.hs  02-1.hs  02-2.hs  03-1.hs  03-2.hs  03PerfectlySphericalHousesInAVacuum2.hs  04-1.hs  04-2.hs  04TheIdealStockingStuffer1.hs  05-1.hs  05-2.hs  06-1.hs  06-2.hs  06ProbablyAFireHazard2.hs  07-1.hs  07-2.hs  08-1.hs  08-2.hs  09-1.hs  09-2.hs  10-1.hs  10-2.hs  11-1.hs  11-2.hs  12-1.hs  12-2.hs  13-1.hs  13-2.hs  14-1.hs  14-2.hs  14.hs  15-1.hs  15-2.hs  15.hs  16-1.hs  16-2.hs  16.hs  17-1.hs  (+36 more)
15/Aoc/: GameLife.hs
16/: 01-1.hs  01-2.hs  01.hs  02-1.hs  02-2.hs  03-1.hs  03-2.hs  04-1.hs  04-2.hs  05-1.hs  05-2.hs  06-1.hs  06-2.hs  07-1.hs  07-2.hs  08-1.hs  08-2.hs  09-1.hs  09-2.hs  10-1.hs  10-2.hs  11-1.hs  aoc16.cabal  example  example2
16/Aoc/: Loop.hs
17/: 01-1.hs  01-2.hs  02-1.hs  02-2.hs  aoc17.cabal
17/Aoc/: Comb.hs
20/: 01-1.hs  01-2.hs  02-1.hs  02-2.hs  03-1.hs  03-2.hs  04-1.hs  04-2.hs  05-1.hs  05-2.hs  06-1.hs  06-2.hs  07-1.hs  07-2.hs  08-1.hs  08-2.hs  09-1.hs  09-2.hs  10-1.hs  10-2.hs  11-1.hs  11-2.hs  12-1.hs  12-2.hs  13-1.hs  13-2.hs  14-1.hs  14-2.hs  15-1.hs  15-2.hs  16-1.hs  16-2.hs  17-1.hs  17-2.hs  18-1.hs  18-2.hs  19-1.hs  21-1.hs  22-1.hs  22-2.hs  (+21 more)
2015/: Day1_2.hs  Day2_1.hs  Day3_2.hs  Day6_2.hs  Day7_1.hs  Day7_input_ex1  x2015.cabal
2020/: Day10_1.hs  Day10_2.hs  Day11_2.hs  Day12_2.hs  Day13_2.hs  Day14_1.hs  Day14_2.hs  Day15_2.hs  Day16_1.hs  Day17_2.hs  Day18_1.hs  Day18_2.hs  Day19_1.hs  Day1_1.hs  Day21_1.hs  Day22_1.hs  Day23_1.hs  Day24_2.hs  Day25_1.hs  Day2_2.hs  Day3_1.hs  Day3_2.hs  Day4_1.hs  Day4_2.hs  Day5_2.hs  Day7_1.hs  Day7_2.hs  Day8_1.hs  Day8_2.hs  x2020.cabal
2021/: Day10_1.hs  Day10_2.hs  Day11_2.hs  Day12_1.hs  Day13_1.hs  Day14_2.hs  Day16_1.hs  Day17_1.hs  Day18_1.hs  Day1_1.hs  Day1_input  Day22_1.hs  Day22_2.hs  Day23_1.hs  Day24_1.hs  Day25_1.hs  Day2_1.hs  Day4_1.hs  Day5_2.hs  Day6_2.hs  Day7_2.hs  Day9_1.hs  Day9_2.hs  x2021.cabal
21/: 01  01-1.hs  01-2.hs  02-1.hs  02-2.hs  03-1.hs  03-2.hs  04-1.hs  04-2.hs  05-1.hs  05-2.hs  06-1.hs  06-2.hs  07-1.hs  07-2.hs  08-1.hs  08-2.hs  09-1.hs  09-2.hs  10-1.hs  11-1.hs  11-2.hs  12-1.hs  13-1.hs  13-2.hs  14-1.hs  14-2.hs  15-1.hs  15-2.hs  16-1.hs  16-2.hs  17-1.hs  17-2.hs  18-1.hs  21-1.hs  21-2.hs  22-1.hs  23-1.hs  24-1.hs  25-1.hs  (+15 more)
22/: 01.hs  02.hs  03.hs  04-2.hs  04.hs  05.hs  06-2.hs  06.hs  07-1.hs  07-2.hs  07.hs  08-1.hs  08-2.hs  08.hs  09.hs  10-2.hs  10.hs  11-1.hs  11.hs  12-2.hs  12.hs  13-1.hs  13.hs  14.hs  16.hs  17.hs  22.hs  aoc22.cabal
23/: 01-1.hs  01-2.hs  02-1.hs  02-2.hs  03-1.hs  03-2.hs  04-1.hs  04-2.hs  05-1.hs  05-2.hs  06-1.hs  06-2.hs  07-1.hs  07-2.hs  08-1.hs  08-2.hs  09-1.hs  09-2.hs  aoc23.cabal
24/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  aoc24.cabal  cabal.sh  setghc
25/: 01.hs  02.hs  03.hs  04.hs  05.hs  06.hs  aoc.sh  aoc25.cabal  aoce.sh  cabal.project
AOC/: GameOfLife.hs  List.hs  Loop.hs  Number.hs  PlumbingCombinator.hs
Aoc/: GameOfLife.hs  List.hs  Number.hs  PlumbingCombinator.hs
