cabal-version: 3.6
name: aoc
version: 1.0.0.0
build-type: Simple

library
    build-depends:
       base ^>=4.17.0.0,
       containers ^>=0.6.0.1
    exposed-modules:
       AOC.GameOfLife,
       AOC.List,
       AOC.Loop,
       AOC.Number,
       AOC.PlumbingCombinator
    hs-source-dirs: ., AOC
    default-language: GHC2021

