cabal-version: 3.6
name: aoc
version: 1.0.0.0
build-type: Simple

library
    build-depends:
       base ^>=4.17.2.0,
       containers ^>=0.6.0.1
    exposed-modules:
       Aoc.GameOfLife,
       Aoc.List,
       Aoc.Loop,
       Aoc.Number,
       Aoc.PlumbingCombinator
    hs-source-dirs: ., Aoc
    default-language: Haskell2010
