cabal-version: 3.6
name: aoc
version: 1.0.0.0
build-type: Simple

library
    build-depends:
       base ^>=4.17.2.1,
       containers ^>=0.6.0.1
    exposed-modules:
       Aoc.GameLife,
       Aoc.List,
       Aoc.Loop,
       Aoc.Number,
       Aoc.Comb
    hs-source-dirs: ., Aoc
    default-language: GHC2021
