cabal-version:       >=1.10

name:                adventofcode
version:             0.1.0.0
license-file:        LICENSE
author:              daniel cabral
maintainer:          danielc777888@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

executable 04TheIdealStockingStuffer1
  main-is:             04TheIdealStockingStuffer1.hs
  build-depends:       base >=4.14 && <4.15
                     , cryptonite == 0.27
                     , bytestring == 0.10.10.0
  default-language:    Haskell2010

executable 04TheIdealStockingStuffer2
  main-is:             04TheIdealStockingStuffer2.hs
  build-depends:       base >=4.14 && <4.15
                     , cryptonite == 0.27
                     , bytestring == 0.10.10.0
  default-language:    Haskell2010
