cabal-version:       3.6

name:                adventofcode
version:             0.1.0.0
license-file:        LICENSE
author:              daniel cabral
maintainer:          danielc777888@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md
tested-with: GHC == 9.2.2

executable 04TheIdealStockingStuffer1
  main-is:             04TheIdealStockingStuffer1.hs
  build-depends:    base ^>=4.16.1.0,
        bytestring ^>= 0.11.3.1,
        text ^>= 1.2.5.0,
        containers ^>= 0.6.5.1,
        cryptonite ^>= 0.30
  default-language:    Haskell2010

executable 04TheIdealStockingStuffer2
  main-is:             04TheIdealStockingStuffer2.hs
  build-depends:    base ^>=4.16.1.0,
        bytestring ^>= 0.11.3.1,
        text ^>= 1.2.5.0,
        containers ^>= 0.6.5.1,
        cryptonite ^>= 0.30
  default-language:    Haskell2010
