cabal-version:       3.6

name:                aoc15
version:             0.1.0.0
license-file:        LICENSE
author:              daniel cabral
maintainer:          danielc777888@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md
tested-with: GHC == 9.2.2

common common
  default-language: GHC2021
  build-depends:    base ^>=4.16.1.0,
                    bytestring ^>= 0.11.3.1,
                    deepseq ^>= 1.4.6.1,
                    text ^>= 1.2.5.0,
                    containers ^>= 0.6.5.1,
                    aoc
  ghc-options: -O2 -ferror-spans -threaded -rtsopts

executable 01-1
  import: common
  main-is:             01-1.hs

executable 01-2
  import: common
  main-is:             01-2.hs

executable 02-1
  import: common
  main-is:             02-1.hs

executable 02-2
  import: common
  main-is:             02-2.hs

executable 03-1
  import: common
  main-is:             03-1.hs

executable 03-2
  import: common
  main-is:             03-2.hs

executable 04-1
  import: common
  main-is:             04-1.hs
  build-depends: cryptonite ^>= 0.30

executable 04-2
  import: common
  main-is:             04-2.hs
  build-depends: cryptonite ^>= 0.30

executable 05-1
  import: common
  main-is:             05-1.hs

executable 05-2
  import: common
  main-is:             05-2.hs

executable 06-1
  import: common
  main-is:             06-1.hs

executable 06-2
  import: common
  main-is:             06-2.hs

executable 07-1
  import: common
  main-is:             07-1.hs

executable 07-2
  import: common
  main-is:             07-2.hs

executable 08-1
  import: common
  main-is:             08-1.hs

executable 08-2
  import: common
  main-is:             08-2.hs

executable 09-1
  import: common
  main-is:             09-1.hs

executable 09-2
  import: common
  main-is:             09-2.hs

executable 10-1
  import: common
  main-is:             10-1.hs

executable 10-2
  import: common
  main-is:             10-2.hs

executable 11-1
  import: common
  main-is:             11-1.hs

executable 11-2
  import: common
  main-is:             11-2.hs

executable 12-1
  import: common
  main-is:             12-1.hs

executable 12-2
  import: common
  main-is:             12-2.hs
  build-depends: aeson ^>= 2.1,
                 scientific ^>= 0.3.7.0,
                 vector ^>= 0.13.0.0
  
executable 13-1
  import: common
  main-is:             13-1.hs

executable 13-2
  import: common
  main-is:             13-2.hs

executable 14
  import: common
  main-is:             14.hs

executable 15
  import: common
  main-is:             15.hs

executable 16
  import: common
  main-is:             16.hs

executable 17
  import: common
  main-is:             17.hs

executable 18
  import: common
  main-is:             18.hs

executable 19
  import: common
  main-is:             19.hs

executable 20-1
  import: common
  main-is:             20-1.hs

executable 20-2
  import: common
  main-is:             20-2.hs

executable 21-1
  import: common
  main-is:             21-1.hs

executable 21-2
  import: common
  main-is:             21-2.hs

executable 22-1
  import: common
  main-is:             22-1.hs

executable 22-2
  import: common
  main-is:             22-2.hs

executable 23-1
  import: common
  main-is:             23-1.hs

executable 23-2
  import: common
  main-is:             23-2.hs

executable 24-1
  import: common
  main-is:             24-1.hs

executable 24-2
  import: common
  main-is:             24-2.hs

executable 25-1
  import: common
  main-is:             25-1.hs

executable 25-2
  import: common
  main-is:             25-2.hs
