cabal-version:       3.6

name:                aoc21
version:             0.1.0.0
license-file:        LICENSE
author:              daniel cabral
maintainer:          danielc777888@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md

common common
  default-language:    Haskell2010
  build-depends:    base ^>= 4.17.2.1,
                    bytestring ^>= 0.11.3.1,
                    text ^>= 2.0.1,
                    containers ^>= 0.6.5.1,
                    array ^>= 0.5.4.0,
                    aoc
  ghc-options: -O2 -ferror-spans -threaded -rtsopts

executable 01-1
  import: common
  main-is:             01-1.hs

executable 01-2
  import: common
  main-is:             01-2.hs

executable 02-1
  import: common
  main-is:             02-1.hs

executable 02-2
  import: common
  main-is:             02-2.hs

executable 03-1
  import: common
  main-is:             03-1.hs

executable 03-2
  import: common
  main-is:             03-2.hs

executable 04-1
  import: common
  main-is:             04-1.hs

executable 04-2
  import: common
  main-is:             04-2.hs

executable 05-1
  import: common
  main-is:             05-1.hs

executable 05-2
  import: common
  main-is:             05-2.hs

executable 06-1
  import: common
  main-is:             06-1.hs

executable 06-2
  import: common
  main-is:             06-2.hs

executable 07-1
  import: common
  main-is:             07-1.hs

executable 07-2
  import: common
  main-is:             07-2.hs

executable 08-1
  import: common
  main-is:             08-1.hs

executable 08-2
  import: common
  main-is:             08-2.hs

executable 09-1
  import: common
  main-is:             09-1.hs

executable 09-2
  import: common
  main-is:             09-2.hs

executable 10-1
  import: common
  main-is:             10-1.hs

executable 10-2
  import: common
  main-is:             10-2.hs

executable 11-1
  import: common
  main-is:             11-1.hs

executable 11-2
  import: common
  main-is:             11-2.hs

executable 12-1
  import: common
  main-is:             12-1.hs

executable 12-2
  import: common
  main-is:             12-2.hs

executable 13-1
  import: common
  main-is:             13-1.hs

executable 13-2
  import: common
  main-is:             13-2.hs

executable 14-1
  import: common
  main-is:             14-1.hs

executable 14-2
  import: common
  main-is:             14-2.hs

executable 15-1
  import: common
  main-is:             15-1.hs

executable 15-2
  import: common
  main-is:             15-2.hs

executable 16-1
  import: common
  main-is:             16-1.hs

executable 16-2
  import: common
  main-is:             16-2.hs

executable 17-1
  import: common
  main-is:             17-1.hs

executable 17-2
  import: common
  main-is:             17-2.hs

executable 18-1
  import: common
  main-is:             18-1.hs

executable 18-2
  import: common
  main-is:             18-2.hs

executable 19-1
  import: common
  main-is:             19-1.hs

executable 19-2
  import: common
  main-is:             19-2.hs

executable 20-1
  import: common
  main-is:             20-1.hs

executable 20-2
  import: common
  main-is:             20-2.hs

executable 21-1
  import: common
  main-is:             21-1.hs

executable 21-2
  import: common
  main-is:             21-2.hs

executable 22-1
  import: common
  main-is:             22-1.hs

executable 22-2
  import: common
  main-is:             22-2.hs

executable 23-1
  import: common
  main-is:             23-1.hs

executable 23-2
  import: common
  main-is:             23-2.hs

executable 24-1
  import: common
  main-is:             24-1.hs

executable 24-2
  import: common
  main-is:             24-2.hs

executable 25-1
  import: common
  main-is:             25-1.hs

executable 25-2
  import: common
  main-is:             25-2.hs
