cabal-version:       3.6

name:                aoc22
version:             0.1.0.0
license-file:        LICENSE
author:              daniel cabral
maintainer:          danielc777888@gmail.com
build-type:          Simple
extra-source-files:  CHANGELOG.md
tested-with: GHC == 9.2.2

common common
  default-language: GHC2021
  build-depends:    base ^>=4.17.0.0,
                    bytestring ^>= 0.11.3.1,
                    deepseq ^>= 1.4.6.1,
                    text ^>= 2.0.1,
                    containers ^>= 0.6.5.1,
                    split ^>= 0.2.3.5,
                    array ^>= 0.5.4.0,
                    arithmoi ^>= 0.12.0.2,
                    integer-gmp ^>= 1.1,
                    aoc
  ghc-options: -O2 -ferror-spans -threaded -rtsopts

executable 01
  import: common
  main-is:             01.hs

executable 02
  import: common
  main-is:             02.hs

executable 03
  import: common
  main-is:             03.hs

executable 04
  import: common
  main-is:             04.hs

executable 05
  import: common
  main-is:             05.hs

executable 06
  import: common
  main-is:             06.hs

executable 07
  import: common
  main-is:             07.hs

executable 08
  import: common
  main-is:             08.hs

executable 09
  import: common
  main-is:             09.hs

executable 10
  import: common
  main-is:             10.hs

executable 11
  import: common
  main-is:             11.hs

executable 12
  import: common
  main-is:             12.hs

executable 13
  import: common
  main-is:             13.hs

executable 14
  import: common
  main-is:             14.hs

executable 15
  import: common
  main-is:             15.hs

executable 16
  import: common
  main-is:             16.hs

executable 17
  import: common
  main-is:             17.hs

executable 18
  import: common
  main-is:             18.hs

executable 19
  import: common
  main-is:             19.hs

executable 20
  import: common
  main-is:             20.hs

executable 21
  import: common
  main-is:             21.hs

executable 22
  import: common
  main-is:             22.hs

executable 23
  import: common
  main-is:             23.hs

executable 24
  import: common
  main-is:             24.hs

executable 25
  import: common
  main-is:             25.hs

