cabal-version:      3.6
name:               aoc24
version:            0.1.0.0
license-file:       LICENSE
author:             daniel cabral
maintainer:         danielc777888@gmail.com
build-type:         Simple
extra-source-files: CHANGELOG.md
tested-with: GHC == 9.12.1

common common
  build-depends: base ^>= 4.21.0.0
  ghc-options: -O2 -Wall -ferror-spans -threaded -rtsopts
  default-language: GHC2024

executable 01
  import: common
  main-is: 01.hs
