cabal-version:      3.14
name:               aoc25
version:            0.1.0.0
license-file:       LICENSE
author:             daniel cabral
maintainer:         danielc777888@gmail.com
build-type:         Simple
extra-source-files: CHANGELOG.md
tested-with: GHC == 9.12.2

common common
  build-depends: base ^>= 4.21.0.0,
                 containers ^>= 0.8,
                 array ^>= 0.5.8.0
  ghc-options: -O2 -Wall -ferror-spans -threaded -rtsopts
  default-language: Haskell2010

executable 01
  import: common
  main-is: 01.hs

executable 02
  import: common
  build-depends: text ^>= 2.1.3
  main-is: 02.hs

executable 03
  import: common
  main-is: 03.hs
